# sc-tech-pulse

./: .gitignore  README.md  dbt_project.yml  main.py  profiles.yml  pyproject.toml
macros/: initcap.sql
models/marts/: fct_regional_growth.sql  fct_startup_density.sql
models/staging/: schema.yml  sources.yml  stg_startups.sql
presentation/: app.py  pyproject.toml
src/: generator.py  ingestion.py
