[project]
name = "sc-tech-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.0",
    "faker>=40.11.0",
    "pandas>=3.0.1",
    "streamlit>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
